refactor generated in prisma

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,21 @@
 	"main": "server.ts",
 	"scripts": {
 		"dev": "tsx watch src/server.ts",
-		"build": "tsc",
+		"build": "prisma generate && tsc",
 		"start": "node dist/server.js"
 	},
 	"dependencies": {
 		"@prisma/adapter-pg": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@prisma/extension-accelerate": "^3.0.1",
+		"@types/bcrypt": "^6.0.0",
+		"@types/cookie-parser": "^1.4.10",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.6",
 		"@types/jsonwebtoken": "^9.0.10",
+		"@types/multer": "^2.0.0",
+		"@types/passport": "^1.0.17",
+		"@types/passport-google-oauth20": "^2.0.17",
 		"bcrypt": "^6.0.0",
 		"cloudinary": "^2.8.0",
 		"cookie-parser": "^1.4.7",
@@ -40,14 +47,7 @@
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
-		"@types/bcrypt": "^6.0.0",
-		"@types/cookie-parser": "^1.4.10",
-		"@types/cors": "^2.8.19",
-		"@types/express": "^5.0.6",
-		"@types/multer": "^2.0.0",
-		"@types/node": "^25.0.5",
-		"@types/passport": "^1.0.17",
-		"@types/passport-google-oauth20": "^2.0.17",
+		"@types/node": "^25.0.6",
 		"@types/pg": "^8.16.0",
 		"prisma": "^7.2.0",
 		"tsx": "^4.21.0"
