--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "web",
-	"version": "0.1.0",
+	"version": "2.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -9,6 +9,7 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-progress": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"class-variance-authority": "^0.7.1",
